css/app.css
.block {
    display: block !important;
}

.big {
    font-size: 1.5em !important;
    line-height: 2em !important;
    height: 2.5em !important;
}

input.centered, .centered {
    text-align: center !important;
    margin-left: auto !important;
    margin-right: auto !important;
}

input.wide, .wide {
    width: 98% !important;
}

/****************************************\
*                                        *
* Connection directive stuff goes below! *
*                                        *
\****************************************/

.connection-container {
    position: relative;
    overflow: scroll;
    height: 100%;
    min-height: 100%;
    border: 2px solid #ccc;
    clear: both;
    margin-top: 10px;
}

.connection-details {
    display: none;
    padding: 5px 5px 5px 15px
}

.expanded {
    display: block !important;
}


.connection-instructions {
    list-style: arrow;
    padding-left: 20px;
    padding-bottom: 10px;
}

.map {
    display: none;
}

@media (min-width: 800px) {
    
    .map {
        float: right;
        display: block;
        width: 50%;
    }

    .connection-title {
        max-width: 25%;
    }
    .connection-details {
        position: absolute;
        top: 0px;
        right: 0px;
        width: 75%;
        height: 100%;
        border-left: 3px solid #ccc;
    }
}

